[tool.poetry]
name = "muskel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
falcon = "^2.0.0"
gunicorn = "^20.0.4"
dataclasses-json = "^0.5.2"
pymongo = "^3.11.0"
mongoengine = "^0.20.0"
marshmallow = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpie = "^2.2.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
